--- a/public/_header.html
+++ b/public/_header.html
@@ -31,7 +31,7 @@
 
     <!-- サイドバーメニュー -->
     <div id="sidebar-menu" class="fixed inset-y-0 left-0 bg-white shadow-lg z-30 transition-all duration-300 ease-in-out
-                                  transform -translate-x-full md:translate-x-0 md:w-16 group">
+                                  transform -translate-x-full md:translate-x-0 md:w-16 group md:hover:w-64">
         <!-- デスクトップ用ハンバーガーメニュー (サイドバーの一番上) -->
         <div class="p-4 flex justify-end md:justify-center">
             <button id="desktop-menu-toggle" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none">
