--- a/public/_header.html
+++ b/public/_header.html
@@ -60,7 +60,7 @@
             </a>
         </nav>
         <div class="mt-auto pt-4 border-t border-gray-200 p-4">
-            <button id="logout-button-mobile" class="flex items-center w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-gray-100">
+            <button id="logout-button-mobile" class="flex items-center w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-red-700">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/></svg>
                 <span class="ml-3 menu-text whitespace-nowrap">ログアウト</span>
             </button>
@@ -69,3 +69,4 @@
 
     <!-- オーバーレイ (メニューが開いているときに背景を暗くする) -->
     <div id="mobile-menu-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-20 hidden md:hidden"></div>
+</header>
