--- a/public/_header.html
+++ b/public/_header.html
@@ -32,6 +32,15 @@
     <!-- サイドバーメニュー -->
     <div id="sidebar-menu" class="fixed inset-y-0 left-0 bg-white shadow-lg z-30 transition-all duration-300 ease-in-out
                                   transform -translate-x-full md:translate-x-0 md:w-16 group md:hover:w-64">
+        <!-- モバイル用閉じるボタン (サイドバーの一番上、モバイルのみ表示) -->
+        <div class="p-4 flex justify-end md:hidden">
+            <button id="close-menu-button" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none">
+                <!-- ×アイコン -->
+                <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                </svg>
+            </button>
+        </div>
         <!-- デスクトップ用ハンバーガーメニュー (サイドバーの一番上) -->
         <!-- ホバーで展開するため、このボタンは不要です -->
         <!-- <div class="p-4 flex justify-end md:justify-center">
